# esp32-task-viewer

./: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  rustfmt.toml  sdkconfig.defaults
.github/workflows/: desktop_ci.yml  rust_ci.yml
apps/esp-desktop/: .gitignore  package.json
apps/esp-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/esp-desktop/src-tauri/src/: main.rs
apps/esp-rom/: .gitignore  Cargo.toml  README.md  package.json
apps/esp-rom/lib/esp32s3-battery-monitor/: README.md
apps/esp-rom/lib/esp32s3-battery-monitor/src/: adc.rs  lib.rs  monitor.rs
apps/esp-rom/lib/esp32s3-buttons-driver/: Cargo.toml  README.md
apps/esp-rom/lib/esp32s3-buttons-driver/src/: button.rs  lib.rs  viewer.rs
apps/esp-rom/lib/esp32s3-slint-st7305-platform/src/: pixel.rs
apps/esp-rom/lib/esp32s3-st7305-lcd-display/: Cargo.toml  README.md
apps/esp-rom/lib/esp32s3-st7305-lcd-display/src/: display.rs  lib.rs
apps/esp-rom/src/: main.rs
apps/esp-rom/ui/: app.slint
esp32-st7305-driver/: Cargo.toml
esp32-st7305-driver/src/: lib.rs
lib/esp32-slint-platform/: Cargo.toml
lib/esp32-slint-platform/src/: lib.rs
lib/esp32-st7305-driver/: Cargo.toml
lib/esp32s3-battery-monitor/: Cargo.toml
lib/esp32s3-battery-monitor/src/: adc.rs  io.rs  monitor.rs
lib/esp32s3-buttons-driver/: Cargo.toml
lib/esp32s3-buttons-driver/src/: io.rs  lib.rs
lib/esp32s3-slint-st7305-platform/: Cargo.toml  README.md
lib/esp32s3-slint-st7305-platform/src/: display.rs  lib.rs  pixel.rs  platform.rs
lib/esp32s3-st7305-lcd-display/: Cargo.toml
lib/esp32s3-st7305-lcd-display/src/: display.rs  io.rs
src/: main.rs
src/esp32_sys/: display_raw.rs  mod.rs  panic_handler.rs  slint_st7305_platform.rs  sys_init.rs
src/esp32_sys/lib/: display_raw.rs  mod.rs
ui/: app.slint  constants.slint
