[workspace]
resolver = "2"
members = ["lib/*", "."]

[workspace.dependencies]
esp32s3-buttons-driver = { path = "lib/esp32s3-buttons-driver" }

[workspace.lints.rust]
unused_qualifications = "warn"
unused_results = "warn"
elided_lifetimes_in_paths = "warn"
rust_2018_idioms = "warn"
rust_2021_prelude_collisions = "warn"
non_ascii_idents = "warn"

[workspace.lints.clippy]
# correctness
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
# complexity
type_complexity = "warn"
# restriction (opt-in)
dbg_macro = "warn"
todo = "warn"
# embedded-friendly overrides
used_underscore_binding = "allow"

[package]
name = "esp32-task-viewer"
version = "0.1.1"
authors = ["yuqizhou <rdjksp@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[lints]
workspace = true

[[bin]]
name = "esp32-task-viewer"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-hal = "0.46.2"
esp-idf-sys = "0.37.2"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
slint = { version = "1.16", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
anyhow = "1.0.102"
embedded-graphics = "0.8.2"
embedded-text = "0.7.3"
chrono = "0.4.45"
esp32s3-st7305-lcd-display = { path = "lib/esp32s3-st7305-lcd-display" }
esp32s3-slint-st7305-platform = { path = "lib/esp32s3-slint-st7305-platform" }
esp32s3-battery-monitor = { path = "lib/esp32s3-battery-monitor" }
esp32s3-buttons-driver = { workspace = true }

[build-dependencies]
embuild = "0.33"
slint-build = "1.16"
