[package]
name = "esp32s3-slint-st7305-platform"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
log = "0.4"
esp32s3-st7305-lcd-display = { version = "0.1.0", path = "../esp32s3-st7305-lcd-display" }
esp-idf-hal = "0.46.2"
anyhow = "1.0.102"
embedded-graphics = "0.8.2"
slint = { version = "1.16", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
] }
