[package]
name = "esp32s3-buttons-driver"
version = "0.1.1"
edition = "2021"
resolver = "2"
description = "Buttons driver for ESP32-S3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/RongDuJiKsp/esp32-task-viewer"

[lints]
workspace = true

[dependencies]
log = "0.4"
esp-idf-hal = "0.46.2"
anyhow = "1.0.102"
