[package]
name = "esp32s3-st7305-lcd-display"
version = "0.1.1"
edition = "2021"
resolver = "2"
description = "ST7305 LCD display driver for ESP32-S3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/RongDuJiKsp/esp32-task-viewer"

[lints]
workspace = true

[dependencies]
log = "0.4"
esp-idf-hal = "0.46.2"
anyhow = "1.0.102"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
st7305 = {version = "0.1.2", features = ["graphics"]}
